assets/css/style.css
/*--------Title-------*/

.title-style {
    text-align: center;
    font-weight: 700;
}
/*-----header------*/
/*-----header colours----*/

.menu-color-home-page {
    background-color: orange;
}
.menu-color-events-page {
    background-color: orange;
}
.menu-color-juniors-page {
    background-color: orange;
}
.menu-color-gallery-page {
    background-color: orange;
}
.menu-color-home {
    background-color: white;
}
.menu-color-events {
    background-color: white;
}
.menu-color-juniors {
    background-color: white;
}
.menu-color-gallery {
    background-color: white;
}

/*-----header navigation-----*/

#nav li {
    font-size: 18px;
    font-weight: 700;
    padding: 0;
    text-align: center;
}
#nav li a {
    color: black;
}

/*------Body-----*/

.list-inline-item:not(:last-child) {
    margin: 0px;
}
.menucontainer {
    font-size: 0;
}

/*-----index page-------*/

#hero-image {
    background: url("https://images.freeimages.com/images/large-previews/457/tennis-5-1565880.jpg"
) no-repeat center center;
    max-width: 100%;
    height: auto;
    background-size: cover;
}
.question1 {
    font-size: 50px;
    font-weight: 700;
    color: black;
    background-color: rgba(206, 220, 22, 0.8);
    text-transform: uppercase;
    text-align: center;
    margin-bottom: 0px;
}
.t-ball {
    height: 140px;
    width: 140px;
    border-radius: 50%;
    background: url("https://image.shutterstock.com/image-photo/tennis-ball-isolated-on-white-600w-659857153.jpg"
) no-repeat center center;
    padding-top: 30px;
    padding-left: 5px;
    padding-right: 5px;
    text-align: center;
    font-size: 18px;
    margin-top: 20px;
}
.tennis-ball {
    height: 150px;
    width: 150px;
    border-radius: 50%;
    background: url("https://cdn.pixabay.com/photo/2014/04/02/17/04/tennis-ball-307846_960_720.png"
) no-repeat center center;
    background-size: cover;
    padding-top: 30px;
    padding-left: 5px;
    padding-right: 5px;
    text-align: center;
    font-size: 18px;
    margin-left: 80px;
    font-weight: 700;
}
.ethos-three li{
    font-size: 14px;
    padding: 0;
    text-align: center;
}
#ethos-three-small {
    margin-top: 30px;
}
#main-space {
    height: 500px;
}
p {
    font-size: 20px;
    color: black;
}

.text-ball p {
    padding-top: 0px;
    padding-left: 20px;
    background-color: black;
    border-radius: 15px;
    margin: 10px 5px 20px 5px;
    color: white;
}
.text-ball-small p {
    padding-top: 0px;
    padding-left: 20px;
    background-color: white;
    border-radius: 15px;
    margin: 10px 5px 5px 5px;
}
#invite {
    background-color: rgba(206, 220, 22, 0.8);
    text-align: center;
    margin-top: 0px;
    padding-top: 0;
}

/*-------Events page------*/
#many-players {
    background: url("https://cdn.pixabay.com/photo/2020/11/27/18/59/tennis-5782695_1280.jpg") no-repeat center center;
    background-size: cover;
    max-width: 100%;
    height: auto;
    margin: 0 auto 0 auto;
}
.shade {
    background-color: rgba(0, 0, 0, 0.5);
    height: 600px;
    width: 100;
}
/*----Dropdown Button Events and Junior pages-----*/

.dropbtn {
  background-color: rgba(206, 220, 22, 0.8);
  color: black;
  padding: 16px;
  font-size: 16px;
  border: none;
}

/*-------The container <div> - needed to position the dropdown content---*/
.dropdown {
  position: relative;
  display: inline-block;
}

/*------Dropdown Content (Hidden by Default)-------*/
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  width: 280px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/*-------Text inside the dropdown------*/
.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/*------Change color of dropdown links on hover-----*/
.dropdown-content a:hover {background-color: #ddd;}

/*------Show the dropdown menu on hover------*/
.dropdown:hover .dropdown-content {display: block;}

/*------Change the background color of the dropdown button when the dropdown content is shown---*/
.dropdown:hover .dropbtn {background-color: orange;}

#event-signup {
    height: 100%;
    width: 100%;
    background: rgba(206, 220, 22, 0.8);
    padding-top: 15px;
    border: 1px solid black;
    border-radius: 5px;
    float: right;
    text-align: center;
}
#event-signup form input {
    border-radius: 8px;
}
#event-signup h6{
    font-weight: 700;
    text-decoration: underline;
}
#submit-event {
    margin-top: 10px;
}
#event-signup-small {
    height: 100%;
    width: 300px;
    background: rgba(206, 220, 22, 0.8);
    padding-top: 15px;
    border: 1px solid black;
    border-radius: 5px;
    margin: 30px auto 0 auto;
    text-align: center;
    border-radius: 5px;
}
#event-signup-small form input {
    border-radius: 8px;
}
#event-signup p {
    color: black;
}
#event-signup-small p {
    color: black;
}
.membership-list {
    list-style-type: none;
}
form {
    color: rgba(0, 0, 0, 0.5);
    font-size: 12px;
}
label {
    color: black;
}
#submit-event-small {
    margin-top: 10px;
}
/*----Timeline (Events and Junior pages------*/

.timeline-item {
    padding-top: 2em 2em 0em 2em;
    position: relative;
    color: rgba(206, 220, 22, 0.8);
    border-left: 3px solid;
}
.timeline-item p {
    padding-top: 2em;
    padding-left: 1em;
    margin: 0;
    color: white;
}

.timeline-item:before {
    content: attr(data-dates);
    position: absolute;
    left: 2.5em;
    top: 2em;
    display: block;
    font-weight: 600;
    color: white;
    font-size: 0.8em;
    padding: 0;
    margin: 0;
}
.timeline-item:after {
    width: 12px;
    height: 12px;
    display: block;
    top: 2em;
    position: absolute;
    left: -6px;
    border-radius: 12px;
    content: '';
    background: rgba(206, 220, 22, 0.8);
}

/*-------Bar Chart------*/

.typical-nos {
    font-size: 18px;
    font-weight: 700;
    color: white;
    margin-top: 10px;
}
.chart {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(100, 1fr);
  grid-column-gap: 5px;
}
* { box-sizing: border-box; }

.chart {
  height: 120px;
  width: 300px;
  
}
[class*="bar"] {
  grid-row-start: 1;
  grid-row-end: 101;
  border-radius: 5px 5px 5px 5px;
  background-color: rgba(206, 220, 22, 0.8);
}
[class*="bar"] {
  grid-row-end: 101;
}

.bar-1 {
  grid-row-start: 50;
  text-align: center;
  position: relative;
  font-weight: 800;
  font-size: 20px;
  border: 1px solid black;
}
.bar-1 span {
  position: absolute;
  bottom: 0;
  left: 10px;
  font-weight: 800;
  font-size: 15px;
}
.bar-2 {
  grid-row-start: 25;
  text-align: center;
  position: relative;
  font-weight: 800;
  font-size: 20px;
  border: 1px solid black;
}
.bar-2 span {
  position: absolute;
  bottom: 0;
  left: 10px;
  font-weight: 800;
  font-size: 15px;
}
.bar-3 {
  grid-row-start: 12;
  text-align: center;
  position: relative;
  font-weight: 800;
  font-size: 20px;
  border: 1px solid black;
}
.bar-3 span {
  position: absolute;
  bottom: 0;
  left: 10px;
  font-weight: 800;
  font-size: 15px;
}
.bar-4 {
  grid-row-start: 25;
  text-align: center;
  position: relative;
  font-weight: 800;
  font-size: 20px;
  border: 1px solid black;
}
.bar-4 span {
  position: absolute;
  bottom: 0;
  left: 10px;
  font-weight: 800;
  font-size: 15px;
}
.bar-5 {
  grid-row-start: 0;
  text-align: center;
  position: relative;
  font-weight: 800;
  font-size: 20px;
  border: 1px solid black;
}
.bar-5 span {
  position: absolute;
  bottom: 0;
  left: 10px;
  font-weight: 800;
  font-size: 15px;
}
/*-----Junior page------*/

#hero-junior {
    height: 600px;
    width: 100%;
    background: url("https://cdn.pixabay.com/photo/2017/02/25/00/18/tennis-2096676__340.jpg") no-repeat center center;
    background-size: cover;
    margin-bottom: 15px;
    margin: 0 auto 0 auto;
}
.junior-shade {
    background-color: rgba(0, 0, 0, 0.5);
    height: 600px;
    width: 100;
}
#junior-signup {
    height: 100%;
    width: 100%;
    background: rgba(206, 220, 22, 0.8);
    border: 1px solid black;
    float: right;
    text-align: center;
}
#junior-signup h6{
    font-weight: 700;
    text-decoration: underline;
}
#submit-junior {
    margin-top: 10px;
}
#junior-signup-small {
    height: 100%;
    width: 300px;
    background: rgba(206, 220, 22, 0.8);
    border: 1px solid black;
    margin: 30px auto 0 auto;
    text-align: center;
    border-radius: 5px;
}
#submit-junior-small {
    margin-top: 10px;
}
.child-signup {
    margin: 0 20px 0 20px;
    border: 1px solid black;
    border-radius: 5px;
}
.child-signup input {
    border-radius: 8px;
}
.adult-signup {
    margin: 10px 20px 10px 20px;
    border: 1px solid black;
    border-radius: 5px;
}
.adult-signup input {
    border-radius: 8px;
}
.adult-signup p {
    margin-top: 15px;
    text-align: center;
    color: black;
}
/*---gallery pictures---*/
#photo {
  clear: both;
  line-height: 0;
  column-count: 4;
  column-gap: 0;
  border: 1px solid black;
}
#photo img {
  width: 100%;
}

/*---responsive design---*/
/*---responsive index page---*/
@media only screen and (max-width: 550px) {
  .question1 {
    font-size: 20px;
  }
}
@media only screen and (max-width: 550px) {
  #main-space {
    height: 300px;
    width: 100%;
    }
}

/*---responsive events page---*/
@media only screen and (max-width: 680px) {
  .chart {
    display:none;
  }
}
@media only screen and (max-width: 680px) {
  .typical-nos {
    display:none;
  }
}
@media only screen and (max-width: 680px) {
  #event-signup {
    display:none;
  }
}
@media only screen and (min-width: 680px) {
  #event-signup-small {
    display:none;
  }
}

/*---responsive junior page---*/
@media only screen and (max-width: 680px) {
  #junior-signup {
    display:none;
  }
}
@media only screen and (min-width: 680px) {
  #junior-signup-small {
    display:none;
  }
}
/*---responsive gallery pictures---*/
@media screen and (max-width: 680px) {
  #photo {
    column-count:2;
  }
}

/*------footer-------*/

#nav-foot li {
    font-size: 18px;
    padding: 0;
    text-align: center;
    padding-top: 30px;
}
#nav-foot-icon li a {
    color: black;
    font-size: 24px;
}
#nav-foot-icon li {
    font-size: 18px;
    padding: 0;
    text-align: center;
    padding-top: 20px;
}
#nav-foot li a {
    color: black;
    font-size: 24px;
}

